@@ -1,3 +1,8 @@
+2008-03-30  Jens Granseuer  <jensgr@gmx.net>
+
+	* file-transfer-dialog.c: (file_transfer_dialog_init): use
+	G_DEFINE_TYPE instead of open-coding get_type
+
 2008-03-28  Jens Granseuer  <jensgr@gmx.net>
 
 	* file-transfer-dialog.c: (file_transfer_job_destroy),
